<resources>
    <string name="app_name">ITHelpDeskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="brand">Brand</string>
    <string name="monitor">Monitor</string>
    <string name="serial_number">Serial Number</string>
    <string name="control_number">Control Number</string>
    <string name="screen_size">Screen Size</string>

    <string-array name="status">
        <item>Okay</item>
        <item>Not Yet Okay</item>
    </string-array>

    <string-array name="typeOfMonitor">
        <item>LCD Monitor</item>
        <item>LED Monitor</item>
        <item>OLED Monitor</item>
    </string-array>

</resources>
