<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Monitor_Add">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/brandEditText" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/brand" android:autofillHints=""
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" tools:ignore="UnusedAttribute"/>
    <TextView
            android:text="@string/monitor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_medium" android:textSize="24sp" android:textColor="@android:color/white"
            android:background="@color/design_default_color_primary" android:padding="20dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/brandEditText" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/serial_number" tools:ignore="Autofill"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_monitor"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" tools:ignore="ContentDescription"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/control_number"
            tools:ignore="Autofill"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" android:hint="@string/screen_size"
            tools:ignore="Autofill"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/typeOfSpinner" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:spinnerMode="dialog"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/statusSpinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/typeOfSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:spinnerMode="dialog"
            android:entries="@array/status"/>
</android.support.constraint.ConstraintLayout>